edit header words

--- a/reportpaybox.html
+++ b/reportpaybox.html
@@ -156,12 +156,12 @@
     <div id="underlinec" class="underlineper"></div>
     <div class="jumbotron text-center d-print-none" style="padding:5px;position: relative;top: -5px;">
         <div class="row"></div>
-        <h1>Report Paybox</h1> <a href="binreportpaybox.html">บิล Paybox</a>
+        <h1>Make Cafe Report</h1> <a href="binreportpaybox.html">บิล Make Cafe</a>
     </div>
 
     <div class="container" style="">
         <div style="text-align: center">
-            <h2 class="d-none d-print-block">Report Paybox </h2>
+            <h2 class="d-none d-print-block">Make Cafe Report</h2>
             <div class=" d-none d-print-block">
                 <span style="display: inline-block">
                     <div id="dateprint"></div>
